# noldo-memory

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FEATURES.md  README.md  asuman-memory.service.example  crontab.example  docker-compose.yml  embedding-server.service.example  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
adapters/hermes/noldomem/: README.md  __init__.py  doctor.py  plugin.yaml
agent_memory/: __init__.py  api.py  compression.py  config.py  conflict_detector.py  embeddings.py  entities.py  ingest.py  metrics.py  middleware.py  pool.py  reranker.py  rules.py  search.py  secret_redaction.py  storage.py  token_utils.py  triggers.py  turkish.py
asuman_memory/: __init__.py  __main__.py  api.py  config.py  embeddings.py  entities.py  ingest.py  search.py  storage.py  triggers.py  turkish.py
docs/: external-runtime-adapters.md  hermes-integration.md  scoring-pipeline.md
hooks/: README.md  package.json
hooks/after-tool-call/: handler.js  handler.js.example
hooks/before-compaction/: HOOK.md  handler.js
hooks/bootstrap-context/: HOOK.md  handler.js  handler.js.example
hooks/claim-scanner/: HOOK.md  handler.js  handler.js.example
hooks/lib/: ats.js  automation-inventory.js  bulletin.js  cron-templates.js  memory-api.js  metrics.js  resilient-import.js  runtime.js  shared-state.js  spr.js  util.js
hooks/message-recall/: HOOK.md  handler.js.example
hooks/post-compaction-restore/: HOOK.md  handler.js  handler.js.example
hooks/pre-session-save/: handler.js  handler.js.example
hooks/realtime-capture/: HOOK.md  handler.js  handler.js.example
hooks/session-end-capture/: HOOK.md  handler.js  handler.js.example
hooks/subagent-complete/: handler.js  handler.js.example
migrations/: 001_temporal_facts_extensions.sql
plugin/: README.md  index.js  openclaw.plugin.json  package.json
plugin/src/: client.js  hooks.js  sanitize.js  tools.js
scripts/: audit_memory_quality.py  backfill_vectors.py  backup_db.sh  cron_api_call.sh  cron_api_call.sh.bak-20260307  cron_sync.sh  detect-hardware.sh  export-to-openclaw.py  export-to-workspace.py  initial_load.py  manage.sh  migrate_stale_dbs.py  openclaw_sync.py  provision-agent-memory.sh  reclassify_memories.py  redact_memory_secrets.py  reindex_embeddings.py  rescore_cron_memories.py
tests/: conftest.py  test_api.py  test_audit_fixes.py  test_backfill_vectors.py  test_config.py  test_embeddings.py  test_entities.py  test_hermes_adapter.py  test_hook_pack.py  test_ingest.py  test_intent_detection.py  test_memory_quality_audit.py  test_memory_secret_redaction.py  test_openclaw_pack_metadata.py  test_plugin_pack.py  test_reranker.py  test_reranker_api.py  test_reranker_lazy_import.py  test_search.py  test_storage.py  test_token_utils.py  test_triggers.py  test_turkish.py
