[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "asuman-memory"
version = "0.1.0"
description = "Conversational memory system for Asuman AI assistant"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Agent Asuman"}]

dependencies = [
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "sqlite-vec>=0.1.1",
    "dateparser>=1.2.0",
    "zeyrek>=0.1.3",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
asuman-memory = "asuman_memory.api:main"

[tool.setuptools.packages.find]
include = ["asuman_memory*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
