[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agent-memory"
version = "1.0.0"
description = "Conversational memory system for AI agents — hybrid search, Turkish NLP, per-agent routing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "dorukardahan"}]

dependencies = [
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "sqlite-vec>=0.1.1",
    "dateparser>=1.2.0",
    "zeyrek>=0.1.3",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
agent-memory = "agent_memory.api:main"

[tool.setuptools.packages.find]
include = ["agent_memory*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.semantic_release]
version_variables = ["agent_memory/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_message = "chore(release): {version}"
build_command = ""
upload_to_pypi = false

[tool.semantic_release.changelog]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]  # line length handled by line-length setting

[tool.ruff.lint.per-file-ignores]
"agent_memory/entities.py" = ["F401"]
"agent_memory/search.py" = ["F401"]
"agent_memory/ingest.py" = ["F401"]
